# libvideoio-bm

./: CMakeLists.txt  Rakefile  conanfile.py  fips-include.cmake  fips.yml
cmake/: FindBlackmagicSDK.cmake
include/libvideoio_bm/: DeckLinkSource.h  Delegate.h  Identical3DFrames.h  InputCallback.h  InputHandler.h  OpenCvDeckLinkFrame.h  OutputCallback.h  OutputHandler.h  SDICameraControl.h  ThreadSynchronizer.h
lib/: CMakeLists.txt  DeckLinkSource.cpp  Delegate.cpp  Identical3DFrames.cpp  InputCallback.cpp  InputHandler.cpp  OutputHandler.cpp  SDICameraControl.cpp
rake/: dependencies.rb
tools/: BmRecorder.cpp  CMakeLists.txt
